--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
             <!--<version>1.7.12</version>-->
         <!--</dependency>-->
         <!--<dependency>-->
+            <!--<groupId>org.slf4j</groupId>-->
+            <!--<artifactId>slf4j-simple</artifactId>-->
+            <!--<version>1.7.12</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
             <!--<groupId>com.fasterxml.jackson.core</groupId>-->
             <!--<artifactId>jackson-databind</artifactId>-->
             <!--<version>2.6.3</version>-->
